# ChangeLog for media-sound/pulseaudio
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/pulseaudio/ChangeLog,v 1.303 2013/05/01 03:23:59 ford_prefect Exp $

  01 May 2013; Arun Raghavan <ford_prefect@gentoo.org>
  pulseaudio-2.1-r1.ebuild, pulseaudio-3.0.ebuild:
  Restrict json-c version in older ebuilds since they are incompatible with
  current unstable json-c 0.11.

  01 May 2013; Arun Raghavan <ford_prefect@gentoo.org>
  -pulseaudio-1.1-r1.ebuild:
  Drop old version

*pulseaudio-3.0-r1 (27 Apr 2013)

  27 Apr 2013; Arun Raghavan <ford_prefect@gentoo.org>
  +pulseaudio-3.0-r1.ebuild, +files/pulseaudio-3.0-json-c-fix.patch:
  Fix compilation with json-c 0.11 (bug #467280).

  10 Apr 2013; Vicente Olivert Riera <vincent@gentoo.org>
  pulseaudio-1.1-r1.ebuild, pulseaudio-2.1-r1.ebuild, pulseaudio-3.0.ebuild,
  pulseaudio-9999.ebuild:
  Update to EAPI=5, wrt bug #437906

  14 Mar 2013; Arun Raghavan <ford_prefect@gentoo.org> pulseaudio-9999.ebuild:
  git master replaced gtk-2 with gtk-3 support. Adapt live ebuild for this.

  20 Feb 2013; Arun Raghavan <ford_prefect@gentoo.org> pulseaudio-3.0.ebuild,
  pulseaudio-9999.ebuild, metadata.xml:
  Switch USE=qt -> USE=qt4 to be able to reuse the global USE flag.

  15 Feb 2013; Nirbheek Chauhan <nirbheek@gentoo.org> metadata.xml,
  pulseaudio-3.0.ebuild, pulseaudio-9999.ebuild:
  Add USE=qt to pull in qt deps for equalizer

  01 Jan 2013; Raúl Porcel <armin76@gentoo.org> pulseaudio-2.1-r1.ebuild:
  sh stable wrt #435074

  30 Dec 2012; Agostino Sarubbo <ago@gentoo.org> pulseaudio-2.1-r1.ebuild:
  Stable for sparc, wrt bug #435074

  29 Dec 2012; Agostino Sarubbo <ago@gentoo.org> pulseaudio-2.1-r1.ebuild:
  Stable for alpha, wrt bug #435074

  26 Dec 2012; Arun Raghavan <ford_prefect@gentoo.org> pulseaudio-9999.ebuild:
  Add neon USE flag to live ebuild as well.

  21 Dec 2012; Markus Meier <maekke@gentoo.org> pulseaudio-3.0.ebuild: