@@ -12,16 +12,18 @@ AUX pulseaudio.conf.d 275 SHA256 c03661e8cc902d27ff6b52f291207f2b008957571b942ab
 AUX pulseaudio.init.d-5 2352 SHA256 60e4571a8af0437bd99cfd858fde1e6223544a60e591febf25e55e4a2918ff59 SHA512 c510ddc71509435946a4f5a29ee2deb124fddec1a078433651bee99fd71424a0673c6b67015c2b737878e0e6e1da0b0ee4935e419a00cbfe74d6f8c8dc91f243 WHIRLPOOL 9fd81ab29c74b5bfc75aa15d73490881d59c4a280dd6214baf714080e74cb8cdd263d70ec220ea30c08da7890345f5bee6e0d68d2b04c8f5711051fe2b330cbc
 DIST pulseaudio-2.1.tar.xz 1355004 SHA256 ef6b347bf47abfb98080795f1583018ac959b4aeb4df916b879f9e1eaba0ca7f SHA512 56b672968ae32dcaa5520b8199ed603f4f1223c7884ee6ad1ddf0ee796b1859784c262eef749504f996638f68bf2b213dd0ad1e9cddfb342e2795300ff9972b6 WHIRLPOOL cf4e38d868b67e1cf3fe610d8759a922c7a71040d923844ea0168b00b756b51882580504a7d876e470d0a6ad523a643ddb1559424d8786bc4d9ce457b4a855ea
 DIST pulseaudio-3.0.tar.xz 1367468 SHA256 c90bfda29605942d08e3e218ef10e3c660506a06651a616bfbb6a6df8392836d SHA512 965d6f2472f1b15b600b4578cfbfcb6bbe6be2e7661c0672216141118e34caba3046a026aed69d4fc6ae82b7190bc64e00cf03fb638a872b5d0d25c7c3e10514 WHIRLPOOL 79813545993c7a6291550a471d5e32826438c72060ca07051a455a23c8695de5e1d30d104bec01ec29552e5e8d72448f393536d5b81c50d6371e29567ba937bc
+DIST pulseaudio-4.0.tar.xz 1392072 SHA256 35ceb36bb1822fe54f0b5e4863b4f486769fdfb8ff2111f01fd8778928f9cdae SHA512 7cfb57b15943ec5239f23b90637ab7ab421ac57cf05312030bb348ee7d72a70343716b9bf79035b2426e820984cf8179285548b8acf0b7232defcd8b9ad32e83 WHIRLPOOL 41b69fa34648b484beb3fd81cd4756bdc8bbedf4e102d792e2f48b57f62e532f496e9f0146feabbfe37bd91f0d4f7402105a56d58a9b053bb0de3ac6ad233467
 EBUILD pulseaudio-2.1-r1.ebuild 6727 SHA256 39b54594254ece15976a35be17ab91f2bf50578751271fca2fa476476719c0d9 SHA512 1f984e9b989844e4f0089a44b178f542c670c11c5d59f8892a756031af6ea101b8e633e4aa051097318da766f37c585b0245eda4d5cdd9c9cbd82db841397afc WHIRLPOOL c79d6df1f08a33c043f12749fb75507c2cd029b23c83bb7dd733192f04ab3da92c317cacbe688cea77f3bb779f08c0bca022ee7b3d97771e7473d199b9562434
 EBUILD pulseaudio-3.0-r1.ebuild 6997 SHA256 a78bf3e41974c3aceb5e21aa384a9031c48aab18ed4411d8095d285b1ffe34d2 SHA512 45e4d06d01c3eef923ae87117e94c02cb09831c1366688e566c2dda4b81b1b92709555853b4a3aa857350d9e503cf4f02d5eaa943f850e4fdf19811f125f87df WHIRLPOOL 74d08e72779b638b8b9a5071321a673a343bc9d121381e6ec9cc74d225293e52f08c6b8bfc9b9a53a32d2c2fdf2e057b58617c39b627d9005c200eac12cedf93
 EBUILD pulseaudio-3.0.ebuild 6914 SHA256 45e460424b34a9b19382978862ecc14004f6c021231b3a93a74a054c87a83617 SHA512 2f4b1753027b5b1d992e9a72ae633bf7c3b10ea65b1ba632fa834c5d8ba578b892bfb1ee3e1d75780841f564585d784b0ce01faf5fd61a29319f803d75dd01e1 WHIRLPOOL bf563b5ec780f46d5b449b478a8a495855f65256c396b9608f60332420c415f67f67014229f4af4823ff8ae1487f3e6134c7614690898737008aa55f401df7c8
-EBUILD pulseaudio-9999.ebuild 6854 SHA256 beebdfe502b907ae648b6f446174fbbddffe17434cda2b1435518955f3e06b96 SHA512 9014fa7c596bb41d0531455485090e4ef51a18844b391e26dce37bdc2d5ec59f3f00a15bda5b00b214699cb562bff0dff0b2997d2706c307eba4ae4990d8f102 WHIRLPOOL f1161dd70091cd8e5f1738cb2c80d96032d400cf91abb75f0ab93299abcf9ec3f71f0344c719e5ca18baeebcce12f4394ed56e4207fad0623b15a01dcdb2d3a6
-MISC ChangeLog 58545 SHA256 7c1f149f03773880f0fc541a8f2dbfcb258938d70a970e68ec7259769fe533e9 SHA512 c1b86fb2a34274418cda0a31e684c018a960486f485cb23f7e1d5590f1b4a51e67cbe3755de26e0e214f3d601158b5ceab298e9fa0deeb928315f0d599f3784f WHIRLPOOL cff6bc35ed2326b387e5dbe335310e197ea0536ef4c31d307f0cd90ea21d82c2f4054bf3cc3f6c19a6989183c832911bf76c4bedc15539628d44336a6d5b62b7
+EBUILD pulseaudio-4.0.ebuild 6924 SHA256 e76e246fce6f5d3242300ce44c96d1b03601d693dbd837206cba43698c3d4896 SHA512 d9adf5758022138635d3ecae7b69442c4691b15308acb8b37dbd8667ca9b74286fc9c0f8028307d612d022b8e7b3692b7227a230addad6d6ec0dbdec60aa4b60 WHIRLPOOL f1dba9db7100496c38e7f511a6f2dc01307d5751361c1c2253a95273e5b9e239b7c24bb0b198c37f2ca153e73ac171cff273f6ef442f0f61be8a73c42b2c11d8
+EBUILD pulseaudio-9999.ebuild 6905 SHA256 2a389c441fb6ac194a73d1c725093eb94055d6bc77c6ef3c7cdb4bd364463924 SHA512 64235504e4498f2ca53b7bec39a49095c4fe5b1ab91ce15546882884c364dc66e48f56014bad0712a37be954007d48a633f41a0892f0063fed073e3f9aadfd4c WHIRLPOOL 390ee2e023fa573d991db75cbb6f7ffc8329f09cfbe40d3d23f266a8700f27652b86d394cfd192061971e25840836be4014e667bfe5c5ba35cdd58822be153e1
+MISC ChangeLog 58721 SHA256 cb191a6cd259495a35394ce055cbb14c838e699da4c66bc68bb30eb9baaea76c SHA512 69c52b0edf4e82487096639a368b1a119225ebaba412d6ed62802f85e941e8f7ccc93e12bd667d8c764e55c425f04417d66d1b6d60d0603054390dbc9e191cf5 WHIRLPOOL d42e24ae9606fff93d7f2824a865d165aa74c0bb800d690dc28d7510398738c7314464c985ff6a12de0771b1152b6af3df5c5b1c300ce6fb259328004725a216
 MISC metadata.xml 2915 SHA256 833bf5b1874232dc37f100f32ad32a4b757d02d96cda0b49596196f4d715ea61 SHA512 52660b534e64ce727c1eea8060cbf66a2a5776d3149e551aa00800c65c80dfbed5828c974ba82dcd6e56e849612645dd1f7d2cf1aed250a2631b53bb10cccb3c WHIRLPOOL 51605e887017e571800d79394d0515740888c337228dcb89f70389734044553b95043edd7e362b70cd9b1eff0be34a22f37d6a3bc45d41fa102264963e7b00a8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlGAixoACgkQ+Vqt1inD4uwuUACeIgN+ZKVK21P6Ul5aqIsbY0Fs
-APIAn1rYLV7uPrU+7zpUK2HS5UjVqx+8
-=YE9U
+iEYEAREIAAYFAlGs7TIACgkQ+Vqt1inD4uwwygCeOmrkcOVRo9xv7BU52SsVCF/4
+AVQAoK7ivCU0qNg5C46WwLREVKYJY19o
+=bkvt
 -----END PGP SIGNATURE-----
