@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/pulseaudio
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/pulseaudio/ChangeLog,v 1.303 2013/05/01 03:23:59 ford_prefect Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/pulseaudio/ChangeLog,v 1.304 2013/06/03 19:23:05 ford_prefect Exp $
+
+*pulseaudio-4.0 (03 Jun 2013)
+
+  03 Jun 2013; Arun Raghavan <ford_prefect@gentoo.org> +pulseaudio-4.0.ebuild,
+  pulseaudio-9999.ebuild:
+  Bump to 4.0 finel release, drop RC2.
 
   01 May 2013; Arun Raghavan <ford_prefect@gentoo.org>
   pulseaudio-2.1-r1.ebuild, pulseaudio-3.0.ebuild:
